@@ -32,7 +32,6 @@
 
 #ifdef HAVE_LIBNOTIFY
 #include <libnotify/notify.h>
-#include <libnotify/notification.h>
 #endif
 
 static const gint timeout_seconds = 5;
@@ -92,8 +91,13 @@ gblibnotify_notification(const gchar *subject, const gchar *content)
 	/* not sure if we have to free the pixbuf since it could be used internally in libnotify
 	   have to investigate further also need supply the full path of the filename 
        with the auto* magic stuff*/
-    GdkPixbuf *icon_pixbuf = gdk_pixbuf_new_from_file(IMAGEDIR"/gnomebaker-48.png", NULL);
-	notify_notification_set_icon_from_pixbuf (global_notify, icon_pixbuf);
+    GdkPixbuf *icon_pixbuf = gdk_pixbuf_new_from_file(IMAGEDIR"/gnomebaker-48.png", NULL);    
+    /* I think they changed the api between 0.3.0 and 0.3.1+ */
+#if (LIBNOTIFY_VERSION_MICRO >= 1)
+    notify_notification_set_icon_from_pixbuf (global_notify, icon_pixbuf);
+#else
+    notify_notification_set_icon_data_from_pixbuf (global_notify, icon_pixbuf); 
+#endif    
     notify_notification_set_timeout (global_notify, timeout_seconds * MILISECONDS_IN_SECOND);
 
 	/*if (point) 
